--- a/index.html
+++ b/index.html
@@ -16,23 +16,48 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-sm bg-secondary fixed-top">
-    <div class="container">
-
-        <a class="navbar-brand mr-auto" href="#">LOGO</a>
-        <div class="collapse navbar-collapse" id="Navbar">
-             <ul class="navbar-nav mr-auto">
-                 <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-                 <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                 <li class="nav-item"><a class="nav-link" href="#">Gallery</a></li>
-                 <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-             </ul>
-            </div> 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>           
-     </div>
-</nav>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" style="background-image: linear-gradient(to bottom,black,rgba(0, 0, 0, 0.5));">
+        <a class="navbar-brand" href="#home"><img class="img-fluid" src="images/1592892302703.png" style="height: 40px;"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
+          aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent-4" >
+          <ul class="navbar-nav mr-auto smooth-scroll">
+            <li class="nav-item">
+              <a class="nav-link" href="#home">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">ABOUT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#smiles">SMILES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#gallery">GALLERY</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">CONTACT US</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-auto nav-flex-icons">
+            <li class="nav-item">
+                <a href="https://instagram.com/ncore_mock_test?igshid=48szrfhzt214" target="_blank" class="nav-link waves-effect waves-light" ><i class="fa fa-instagram"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+            </li>
+            <li class="nav-item">
+                 <a href="https://www.facebook.com/Ncore20/" target="_blank" class="nav-link waves-effect waves-light"><i class="fa fa-facebook-f"></i>
+                </a>
+            </li>
+            <li class="nav-item">
+              <a href="mailto:Ncoreneetexam@gmail.com" target="_blank" class="nav-link waves-effect waves-light"><i class="fa fa-envelope"></i>
+             </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
     <div class="container">
         <div class="row">
@@ -63,6 +88,170 @@
         copyright
         </div>
     </div>
+
+    <div class="row" id="gallery">
+        <div class="col-12" id="swiper">
+          <h2>IMPRINTS GALLERY</h2><br><br>
+            <div class="col-sm-12 col-xs-12">
+              <center>
+              <div class="box">
+                <span style="--i:1;"><img src="images/Imprints gallery/img1.png"></span>
+                <span style="--i:2;"><img src="images/Imprints gallery/img2.jpg"></span>
+                <span style="--i:3;"><img src="images/Imprints gallery/img3.jpg"></span>
+                <span style="--i:4;"><img src="images/Imprints gallery/img4.jpg"></span>
+                <span style="--i:5;"><img src="images/Imprints gallery/img5.jpg"></span>
+                <span style="--i:6;"><img src="images/Imprints gallery/img6.jpg"></span>
+                <span style="--i:7;"><img src="images/Imprints gallery/img7.jpg"></span>
+                <span style="--i:8;"><img src="images/Imprints gallery/img8.jpg"></span>
+                <span style="--i:9;"><img src="images/Imprints gallery/img9.jpg"></span>
+                <span style="--i:10;"><img src="images/Imprints gallery/img10.jpg"></span>
+                <span style="--i:11;"><img src="images/Imprints gallery/img11.jpg"></span>
+                <span style="--i:12;"><img src="images/Imprints gallery/img12.jpg"></span>
+                <span style="--i:13;"><img src="images/Imprints gallery/img13.png"></span>
+                <span style="--i:14;"><img src="images/Imprints gallery/img14.png"></span>
+                <span style="--i:15;"><img src="images/Imprints gallery/img15.jpeg"></span>
+              </div>            
+              </center>            
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <section id="contact">
+        <div class="container" style="width: 100%;">
+            <div class="row">
+              <div class="col-md-6 col-12">
+                <div class="contactinfo">
+                    <h2>CONTACT US</h2>
+                    <div class="row">
+                      <div class="col">
+                        <div id="map-container-google-11" class="z-depth-1-half map-container-6" style="height: 200px">
+                          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.853999340548!2d75.83495611462733!3d11.272140891986298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65c761ec9e5ed%3A0x451b0ee9d6098b36!2sCalicut%20Medical%20College%2C%20SH24%2C%20Government%20Medical%20College%20Campus%2C%20Kozhikode%2C%20Kerala%20673008%2C%20India!5e0!3m2!1sen!2sus!4v1592896212102!5m2!1sen!2sus"
+                            frameborder="0" style="border:0" allowfullscreen></iframe>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row text-center" style="padding-top: 10px;">
+                      <div class="col">
+                        <ul class="info" >
+                          <li>
+                            <span><a class="btn-floating"><i class="fa fa-mobile"></i></a></span>
+                            <p>Ummar Faris : 9207555913</p><p>Nadha Shafi : 8078009608</p>
+                          </li>
+                        </ul>
+                      </div>
+                      <div class="col">
+                        <ul class="info">
+                          <li>
+                            <span><a class="btn-floating"><i class="fa fa-map-marker"></i></a></span>
+                            <p>Government Medical College Campus Kozhikode, Kerala 673008 India</p>                  
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <ul class="sci">
+                        <div class="con-social-btns">
+                            <button>
+                                <i class="bx fa fa-instagram fa-2x"></i>
+                                <div class="bg"></div>
+                            </button>
+                            <button>
+                                <i class="bx fa fa-envelope fa-2x"></i>
+                                <div class="bg"></div>
+                            </button>  
+                            <button>
+                                <i class="bx fa fa-facebook-f fa-2x"></i>
+                                <div class="bg"></div>
+                            </button>  
+                            <button>
+                                <i class="bx fa fa-linkedin fa-2x"></i>
+                                <div class="bg"></div>
+                            </button>                              
+                        </div>
+
+                    </ul> 
+                    
+                </div>
+              </div>
+              <div class="col-md-6 col-12"  style=" padding: 2%;">
+                <div class="tensors">
+                    <h2 style="font-size: 20px;
+                    font-weight: bold;
+                    font-family: Candara;
+                    color: rgb(22, 160, 132);margin-top: 5%;">
+                        POWERED BY
+                    </h2>
+                    <h2 style="text-align: center;margin-top: 5%;margin-bottom: 5%;">
+                        <a href="http://tensors.in">
+                        <img class="img-fluid" src="images/logof2.png" style="height: 100px;">
+                        <h3 style="text-align: right;font-size: medium;font-family: Candara;color: rgb(22, 160, 132);padding-top: 0;">Social Campaign Initiative</h3>
+                        </a>
+                    </h2>
+                    <div class="row justify-content-end" style="text-align: right;margin-top: 5%;">
+                        <div class="con-social-btns col-md-6 order-md-last">
+                            <button>
+                                <i class="bx fa fa-instagram fa-1x"></i>
+                                <div class="bg" style="width: 30px;height: 30px;background: rgb(22, 160, 132);"></div>
+                            </button>
+                            <button>
+                                <i class="bx fa fa-envelope fa-1x"></i>
+                                <div class="bg" style="width: 30px;height: 30px;background: rgb(22, 160, 132);"></div>
+                            </button>  
+                            <button>
+                                <i class="bx fa fa-facebook-f fa-1x"></i>
+                                <div class="bg" style="width: 30px;height: 30px;background: rgb(22, 160, 132);"></div>
+                            </button>  
+                            <button>
+                                <i class="bx fa fa-linkedin fa-1x"></i>
+                                <div class="bg" style="width: 30px;height: 30px;background: rgb(22, 160, 132);"></div>
+                            </button>                              
+                        </div>                  
+                    </div>
+                </div>
+              </div>  
+            </div>
+          </div>
+    </section>
+
+    <script>
+        const btns = document.querySelectorAll('.con-social-btns button')
+
+        btns.forEach((item) => {
+            item.addEventListener('mousemove', (evt) => {
+                const x = evt.layerX - 60
+                const y = evt.layerY - 60
+                const bg = evt.target.querySelector('.bg')
+                const i = evt.target.querySelector('i.bx')
+                bg.style.transform = `translate(${x / 8}px, ${y / 8}px)`
+                i.style.transform = `translate(${x / 4}px, ${y / 4}px)`
+            })
+
+            item.addEventListener('mouseenter', (evt) => {
+                const bg = evt.target.querySelector('.bg')
+                const i = evt.target.querySelector('i.bx')
+                bg.style.transition = 'all .15s ease'
+                i.style.transition = 'all .15s ease'
+                setTimeout(() => {
+                    bg.style.transition = ''
+                    i.style.transition = ''
+                }, 150);
+            })
+
+            item.addEventListener('mouseleave', (evt) => {
+                const bg = evt.target.querySelector('.bg')
+                const i = evt.target.querySelector('i.bx')
+                bg.style.transition = 'all .25s ease'
+                i.style.transition = 'all .25s ease'
+                bg.style.transform = `translate(${0}px, ${0}px)`
+                i.style.transform = `translate(${0}px, ${0}px)`
+
+                setTimeout(() => {
+                    bg.style.transition = ''
+                    i.style.transition = ''
+                }, 250);
+            })
+        })
+    </script>
 
  <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
