--- a/index.html
+++ b/index.html
@@ -41,17 +41,15 @@
             </li>
           </ul>
           <ul class="navbar-nav ml-auto nav-flex-icons">
-            <li class="nav-item">
+            <li class="nav-item" style="padding-right: 5%;">
                 <a href="https://instagram.com/ncore_mock_test?igshid=48szrfhzt214" target="_blank" class="nav-link waves-effect waves-light" ><i class="fa fa-instagram"></i>
               </a>
             </li>
-            <li class="nav-item">
-            </li>
-            <li class="nav-item">
+            <li class="nav-item" style="padding-right: 5%;padding-left: 5%;">
                  <a href="https://www.facebook.com/Ncore20/" target="_blank" class="nav-link waves-effect waves-light"><i class="fa fa-facebook-f"></i>
                 </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" style="padding-left: 5%;">
               <a href="mailto:Ncoreneetexam@gmail.com" target="_blank" class="nav-link waves-effect waves-light"><i class="fa fa-envelope"></i>
              </a>
             </li>
@@ -59,7 +57,7 @@
         </div>
       </nav>
 
-    <div class="container">
+    <div class="container" id="home">
         <div class="row">
             landing page covering the entire screen
         </div>
@@ -212,6 +210,12 @@
             </div>
           </div>
     </section>
+
+    <footer class="page-footer font-small fixed-bottom " style="font-weight: bold;height: 7vh;padding: 0;">
+        <div class="footer-copyright text-center py-3" style="background-color: transparent;padding: 0;"><i class="fa fa-copyright"></i>&emsp;2020 Copyright
+          <a href="http://tensors.in" style="color: rgb(22, 160, 132);">&emsp;POWERED BY TENSORSCI&emsp;<img src="images/l.png" class="img-fluid" style="height: 40px;"></a>
+        </div>
+    </footer>
 
     <script>
         const btns = document.querySelectorAll('.con-social-btns button')
