--- a/index.html
+++ b/index.html
@@ -115,87 +115,27 @@
         </div>
       </div>
 
-    <!-- <section id="contact" style="background-color: #5c6b73;">
-        <div class="container" style="width: 100%; ">
-            <div class="row">
-              <div class="col-md-6 col-12">
-                <div class="contactinfo">
-                    <h2>CONTACT US</h2>
-                    <div class="row">
-                      <div class="col">
-                        <div id="map-container-google-11" class="z-depth-1-half map-container-6" style="height: 200px">
-                          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.853999340548!2d75.83495611462733!3d11.272140891986298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65c761ec9e5ed%3A0x451b0ee9d6098b36!2sCalicut%20Medical%20College%2C%20SH24%2C%20Government%20Medical%20College%20Campus%2C%20Kozhikode%2C%20Kerala%20673008%2C%20India!5e0!3m2!1sen!2sus!4v1592896212102!5m2!1sen!2sus"
-                            frameborder="0" style="border:0" allowfullscreen></iframe>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row text-center" style="padding-top: 10px;">
-                      <div class="col">
-                        <ul class="info" >
-                          <li>
-                            <span><a class="btn-floating"><i class="fa fa-mobile"></i></a></span>
-                            <p>Ummar Faris : 9207555913</p><p>Nadha Shafi : 8078009608</p>
-                          </li>
-                        </ul>
-                      </div>
-                      <div class="col">
-                        <ul class="info">
-                          <li>
-                            <span><a class="btn-floating"><i class="fa fa-map-marker"></i></a></span>
-                            <p>Government Medical College Campus Kozhikode, Kerala 673008 India</p>                  
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                    <ul class="sci">
-                        <div class="con-social-btns">
-                            <button>
-                                <i class="bx fa fa-instagram fa-2x"></i>
-                                <div class="bg"></div>
-                            </button>
-                            <button>
-                                <i class="bx fa fa-envelope fa-2x"></i>
-                                <div class="bg"></div>
-                            </button>  
-                            <button>
-                                <i class="bx fa fa-facebook-f fa-2x"></i>
-                                <div class="bg"></div>
-                            </button>  
-                            <button>
-                                <i class="bx fa fa-linkedin fa-2x"></i>
-                                <div class="bg"></div>
-                            </button>                              
-                        </div>
-
-                    </ul> 
-                    
-                </div>
-              </div>
-              <div class="col-md-6 col-12"  style=" padding: 2%;">
-              </div>  
-            </div>
-          </div>
-    </section> -->
+ 
 
     <section  style="background-color: #383838;padding-top: 20px;padding-bottom:20px;">
         <div class="container" style="width: 100%; ">
             <div class="row">
               <div class="col-md-6 col-12 d-flex justify-content-left" style="border-right: 3px solid #affc41;">
                 <div class="row">
-                    <div class="col-8">
-                      <div id="map-container-google-11" class="z-depth-1-half map-container-6" style="height: 160px">
+                    <div class="col-12">
+                      <div id="map-container-google-11" class="z-depth-1-half map-container-6">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.853999340548!2d75.83495611462733!3d11.272140891986298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65c761ec9e5ed%3A0x451b0ee9d6098b36!2sCalicut%20Medical%20College%2C%20SH24%2C%20Government%20Medical%20College%20Campus%2C%20Kozhikode%2C%20Kerala%20673008%2C%20India!5e0!3m2!1sen!2sus!4v1592896212102!5m2!1sen!2sus"
                           frameborder="0" style="border:0" allowfullscreen></iframe>
                       </div>
                     </div>
-                    <div class="col-4" style="color: rgb(201, 196, 196);">
+                    <div class="col-12" style="color: rgb(201, 196, 196);">
                               <span><a class="btn-floating" ><i class="fa fa-map-marker"></i></a></span>
                               <h5>Government Medical College Campus Kozhikode, Kerala 673008 India</h5>                  
                     </div>
                   </div> 
               </div>
-              <div class="col-md-6 col-12">
-                  <div class="row"><h4 style="color: #affc41;">Contact Us</h4></div>
+              <div class="col-md-6 col-12" style="text-align: center;">
+                  <div class="row"><h4 style="color: #affc41;">&emsp;Contact Us</h4></div>
                   <div class="row" style="color: rgb(201, 196, 196);">
                     <h5 class="col-12">Ummar Faris : 9207555913
                         <span class="con-social-btns">
@@ -222,25 +162,25 @@
                         </span>
                     </h5>
                   </div>
-                  <div class="row"><h4 style="color: #affc41;">Get Social</h4></div>
+                  <div class="row"><h4 style="color: #affc41;">&emsp;Get Social</h4></div>
                   <div class="row">
 
-                    <div class="con-social-btns">
-                        <button>
-                            <i class="bx fa fa-instagram fa-1.5x"></i>
-                            <div class="bg"></div>
+                    <div class="con-social-btns col-12">
+                        <button class="col">
+                            <i class="bx fa fa-instagram fa-2x"></i>
+                            <div class="bg" style="height: 50px;width: 50px;"></div>
                         </button>
-                        <button>
-                            <i class="bx fa fa-envelope fa-1.5x"></i>
-                            <div class="bg"></div>
+                        <button class="col">
+                            <i class="bx fa fa-envelope fa-2x"></i>
+                            <div class="bg" style="height: 50px;width: 50px;"></div>
                         </button>  
-                        <button>
-                            <i class="bx fa fa-facebook-f fa-1.5x"></i>
-                            <div class="bg"></div>
+                        <button class="col">
+                            <i class="bx fa fa-facebook-f fa-2x"></i>
+                            <div class="bg" style="height: 50px;width: 50px;"></div>
                         </button>  
-                        <button>
-                            <i class="bx fa fa-linkedin fa-1.5x"></i>
-                            <div class="bg"></div>
+                        <button class="col">
+                            <i class="bx fa fa-linkedin fa-2x"></i>
+                            <div class="bg" style="height: 50px;width: 50px;"></div>
                         </button>                              
                     </div>
 
@@ -253,47 +193,41 @@
     <footer>
         <div class="row align-content-center d-flex justify-content-center text-center" style="background-color: black;">
 
-         <div class="col col-md-3" style="color: rgb(22, 160, 132); margin-top: auto; margin-bottom: auto;">Copyright <i class="fa fa-copyright"></i> Tensors 2020</div> 
 
-         <div class="col col-md-6" style="margin-top: auto; margin-bottom: auto;">
-            <h2 style="font-size: 20px;font-weight: bold;font-family: Candara;color: rgb(22, 160, 132);">
+         <div class="row" style="margin-top: auto; margin-bottom: auto;">
+            <h2 class="col-12 col-md-3" style="font-size: 20px;font-weight: bold;font-family: Candara;color: rgb(22, 160, 132);">
                 Powered by&emsp;
-            <span>
+            </h2>
+            <span class="col-12 col-md-4" >
              <a href="http://tensors.in">
             <img class="img-fluid" src="images/logof2.png" style="height: 40px;margin-top:-10px;">
             </a>
-        </span>
-        &emsp;Social Campaign Initiative
-    </h2>
+          </span>
+          <h2 class="col-12 col-md-5" style="font-size: 20px;font-weight: bold;font-family: Candara;color: rgb(22, 160, 132);">&emsp;Social Campaign Initiative</h2>
         </div>
 
-         <div class="col col-md-3 con-social-btns">
+         <div class="col-12 col-md-3 con-social-btns">
             <button>
-                <i class="bx fa fa-instagram fa-1x"></i>
+                <i class="bx fa fa-instagram fa-1x" style="opacity: 1;"></i>
                 <div class="bg" style="width: 30px;height: 30px;background: rgb(22, 160, 132);"></div>
             </button>
             <button>
-                <i class="bx fa fa-envelope fa-1x"></i>
+                <i class="bx fa fa-envelope fa-1x" style="opacity: 1;"></i>
                 <div class="bg" style="width: 30px;height: 30px;background: rgb(22, 160, 132);"></div>
             </button>  
             <button>
-                <i class="bx fa fa-facebook-f fa-1x"></i>
+                <i class="bx fa fa-facebook-f fa-1x" style="opacity: 1;"></i>
                 <div class="bg" style="width: 30px;height: 30px;background: rgb(22, 160, 132);"></div>
             </button>  
             <button>
-                <i class="bx fa fa-linkedin fa-1x"></i>
+                <i class="bx fa fa-linkedin fa-1x" style="opacity: 1;"></i>
                 <div class="bg" style="width: 30px;height: 30px;background: rgb(22, 160, 132);"></div>
             </button> 
          </div>
+         <div class="col-12 col-md-3 order-md-first" style="color: rgb(22, 160, 132); margin-top: auto; margin-bottom: auto;">Copyright <i class="fa fa-copyright"></i> Tensors 2020</div> 
 
         </div>
     </footer>
-
-    <!-- <footer class="page-footer font-small fixed-bottom " style="font-weight: bold;height: 7vh;padding: 0;">
-        <div class="footer-copyright text-center py-3" style="background-color: transparent;padding: 0;"><i class="fa fa-copyright"></i>&emsp;2020 Copyright
-          <a href="http://tensors.in" style="color: rgb(22, 160, 132);">&emsp;POWERED BY TENSORSCI&emsp;<img src="images/l.png" class="img-fluid" style="height: 40px;"></a>
-        </div>
-    </footer> -->
 
     <script>
         const btns = document.querySelectorAll('.con-social-btns button')
