--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" style="background-image: linear-gradient(to bottom,black,rgba(0, 0, 0, 0.5));">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" style="background-color: #031d44; color: white;">
         <a class="navbar-brand" href="#home"><img class="img-fluid" src="images/1592892302703.png" style="height: 40px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
           aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,35 +57,64 @@
         </div>
       </nav>
 
-    <div class="container" id="home">
+    <div  id="home" style="background: rgb(2,0,36);
+    background: linear-gradient(0deg, #031d44 0%, rgba(9,9,121,1) 4%, rgba(0,212,255,1) 33%); height: 100vh;">
+    <div class="container">
         <div class="row">
-            landing page covering the entire screen
+            <img clas="img-fluid" src="/images/IMPRINTS LOGO 1.png" height="500px" style="padding-top: 100px;">
+        </div>
+      </div>
+    </div>
+
+    <div id="about" style="background-color: #031d44;color: white;">
+    <div class="container">
+      <div class="row">
+        <p>
+          Imprints,with a touch of heart,is a humanitarian initiative of the student body of Calicut Medical College along with the Department of Pediatrics of Calicut Medical College. It was launched in 2012 to cater medical and financial needs of the economically poor kids suffering from Type 1 Diabetes, Wilson's Disease and Thalassemia and other diseases keeping their joyful childhood at bay. Since it's establishment Imprints has been a blessing for a large number of parents hammering away to find means to support their child fight their battle.
+
+
+At present Imprints provide for 58 children with Type 1 Diabetes,16 children with Thalassemia and 7 children with Neuro Wilson's. We would like to expand the ambit of our caring ways to embrace a larger population and also requires your support to do so. This pandemic time has been difficult for everyone and we can't let it stop us from doing things that make us more human.
+        </p>
+      </div>
+    </div>
+    </div>
+
+    <div style="background-image: url('/images/money.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+        <div class="container" id="smiles">
+
+        <div class="row" >
+            <div class="col-6"></div>
+            <div class="col-6">
+              <p>
+                IMPRINTS is a charitable organization that has been operating in our college for many years.
+
+Throughout these years students directly collected funds to run our activities.It is also known that Imprint does not have a steady source of income. But SPREADING THOUSANDS SMILES is an initiative that we have put forward to ensure a hassle free secure income.
+
+In this initiative volunteers pay at least Rs.1000 / - a year that is saving about Rs.3 a day for Imprints
+
+We are inviting volunteers to help us by donating Rs.1000 yearly to keep our little mates smile even better
+              </p>
+            </div>
+            <div class="col-6"></div>
+            <div class="col-6">
+              <img src="/images/smiles1-removebg-preview.png">
+              <button type="button" class="btn btn-primary btn-sm btn-block">Spread a Smile</button>
+            </div>
+        </div>
         </div>
 
-        <div class="row">
-            about us
-        </div>
-
-        <div class="row">
-            payment div with 1000 smiles
-        </div>
-
-        <div class="row">
-            gallery
-        </div>
-
-        <div class="row">
-            footer with nav links, contact details of imprints and map
-        </div>
-
-        <div class="row">
-            footer with logo of tensors and social links
-        </div>
-
-        <div class="row">
-        copyright
+      </div>
+      <div style="background-image: url('/images/plant.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+      <div class="container" id="smiles2">
+        <div class="row" >
+          <div class="col-6">
+            <button type="button" class="btn btn-primary btn-sm btn-block">Donate Now</button>
+            <button type="button" class="btn btn-primary btn-sm btn-block">Donate Now</button>
+            <button type="button" class="btn btn-primary btn-sm btn-block">Donate Now</button>
+          </div>
         </div>
     </div>
+  </div>
 
     <div class="row" id="gallery">
         <div class="col-12" id="swiper">
@@ -117,10 +146,10 @@
 
  
 
-    <section  style="background-color: #383838;padding-top: 20px;padding-bottom:20px;">
+    <section  style="background-color: #031d44;padding-top: 20px;padding-bottom:20px;">
         <div class="container" style="width: 100%; ">
             <div class="row">
-              <div class="col-md-6 col-12 d-flex justify-content-left" style="border-right: 3px solid #affc41;">
+              <div class="col-md-6 col-12 d-flex justify-content-left" style="border-right: 3px solid #00bbf9;">
                 <div class="row">
                     <div class="col-12">
                       <div id="map-container-google-11" class="z-depth-1-half map-container-6">
@@ -135,7 +164,7 @@
                   </div> 
               </div>
               <div class="col-md-6 col-12" style="text-align: center;">
-                  <div class="row"><h4 style="color: #affc41;">&emsp;Contact Us</h4></div>
+                  <div class="row"><h4 style="color: #00bbf9;">&emsp;Contact Us</h4></div>
                   <div class="row" style="color: rgb(201, 196, 196);">
                     <h5 class="col-12">Ummar Faris : 9207555913
                         <span class="con-social-btns">
@@ -162,7 +191,7 @@
                         </span>
                     </h5>
                   </div>
-                  <div class="row"><h4 style="color: #affc41;">&emsp;Get Social</h4></div>
+                  <div class="row"><h4 style="color: #00bbf9;">&emsp;Get Social</h4></div>
                   <div class="row">
 
                     <div class="con-social-btns col-12">
