--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" style="background-color: #031d44; color: white;">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" style="background-color: #240112; color: white;">
         <a class="navbar-brand" href="#home"><img class="img-fluid" src="images/1592892302703.png" style="height: 40px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
           aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +58,7 @@
       </nav>
 
     <div  id="home" style="background: rgb(2,0,36);
-    background: linear-gradient(0deg, #031d44 0%, rgba(9,9,121,1) 4%, rgba(0,212,255,1) 33%); height: 100vh;">
+    background: linear-gradient(0deg,  #ef476f 4%, rgb(255, 255, 255) 33%); height: 100vh;">
     <div class="container">
         <div class="row">
             <img clas="img-fluid" src="/images/IMPRINTS LOGO 1.png" height="500px" style="padding-top: 100px;">
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div id="about" style="background-color: #031d44;color: white;">
+    <div id="about" style="background-color: #240112;color: white;">
     <div class="container">
       <div class="row">
         <p>
@@ -146,10 +146,10 @@ We are inviting volunteers to help us by donating Rs.1000 yearly to keep our lit
 
  
 
-    <section  style="background-color: #031d44;padding-top: 20px;padding-bottom:20px;">
+    <section  style="background-color: #240112;padding-top: 20px;padding-bottom:20px;">
         <div class="container" style="width: 100%; ">
             <div class="row">
-              <div class="col-md-6 col-12 d-flex justify-content-left" style="border-right: 3px solid #00bbf9;">
+              <div class="col-md-6 col-12 d-flex justify-content-left" style="border-right: 3px solid #ef476f;">
                 <div class="row">
                     <div class="col-12">
                       <div id="map-container-google-11" class="z-depth-1-half map-container-6">
@@ -164,7 +164,7 @@ We are inviting volunteers to help us by donating Rs.1000 yearly to keep our lit
                   </div> 
               </div>
               <div class="col-md-6 col-12" style="text-align: center;">
-                  <div class="row"><h4 style="color: #00bbf9;">&emsp;Contact Us</h4></div>
+                  <div class="row"><h4 style="color: #ef476f;">&emsp;Contact Us</h4></div>
                   <div class="row" style="color: rgb(201, 196, 196);">
                     <h5 class="col-12">Ummar Faris : 9207555913
                         <span class="con-social-btns">
@@ -191,7 +191,7 @@ We are inviting volunteers to help us by donating Rs.1000 yearly to keep our lit
                         </span>
                     </h5>
                   </div>
-                  <div class="row"><h4 style="color: #00bbf9;">&emsp;Get Social</h4></div>
+                  <div class="row"><h4 style="color: #ef476f;">&emsp;Get Social</h4></div>
                   <div class="row">
 
                     <div class="con-social-btns col-12">
