--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" style="background-color: #240112; color: white;">
         <a class="navbar-brand" href="#home"><img class="img-fluid" src="images/1592892302703.png" style="height: 40px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
@@ -57,7 +58,7 @@
         </div>
       </nav>
 
-    <div  id="home" style="background: rgb(2,0,36);
+    <div id="home" style="background: rgb(2,0,36);
     background: linear-gradient(0deg,  #ef476f 4%, rgb(255, 255, 255) 33%); height: 100vh;">
     <div class="container">
         <div class="row">
@@ -116,7 +117,7 @@ We are inviting volunteers to help us by donating Rs.1000 yearly to keep our lit
     </div>
   </div>
 
-    <div class="row" id="gallery">
+    <div class="row section" id="gallery">
         <div class="col-12" id="swiper">
           <h2>IMPRINTS GALLERY</h2><br><br>
             <div class="col-sm-12 col-xs-12">
@@ -146,7 +147,7 @@ We are inviting volunteers to help us by donating Rs.1000 yearly to keep our lit
 
  
 
-    <section  style="background-color: #240112;padding-top: 20px;padding-bottom:20px;">
+    <div style="background-color: #240112;padding-top: 20px;padding-bottom:20px;">
         <div class="container" style="width: 100%; ">
             <div class="row">
               <div class="col-md-6 col-12 d-flex justify-content-left" style="border-right: 3px solid #ef476f;">
@@ -217,7 +218,7 @@ We are inviting volunteers to help us by donating Rs.1000 yearly to keep our lit
               </div>
             </div>
         </div>
-    </section> 
+      </div> 
 
     <footer>
         <div class="row align-content-center d-flex justify-content-center text-center" style="background-color: black;">
@@ -257,6 +258,8 @@ We are inviting volunteers to help us by donating Rs.1000 yearly to keep our lit
 
         </div>
     </footer>
+
+
 
     <script>
         const btns = document.querySelectorAll('.con-social-btns button')
