--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
     background: linear-gradient(0deg,  #ef476f 4%, rgb(255, 255, 255) 33%); height: 100vh;">
     <div class="container">
         <div class="row">
-            <img clas="img-fluid" src="/images/IMPRINTS LOGO 1.png" height="500px" style="padding-top: 100px;">
+          <div class="col-12">
+            <img class="img-fluid" src="/images/IMPRINTS LOGO 1.png"  style="padding-top: 100px;">
+          </div>
         </div>
       </div>
     </div>
@@ -69,6 +71,12 @@
     <div id="about" style="background-color: #240112;color: white;">
     <div class="container">
       <div class="row">
+
+       <div class="col-12"> 
+         <h1 class="abouttitle">Who We Are</h1>
+        </div>
+
+      <div class="col-12 col-md-8">
         <p>
           Imprints,with a touch of heart,is a humanitarian initiative of the student body of Calicut Medical College along with the Department of Pediatrics of Calicut Medical College. It was launched in 2012 to cater medical and financial needs of the economically poor kids suffering from Type 1 Diabetes, Wilson's Disease and Thalassemia and other diseases keeping their joyful childhood at bay. Since it's establishment Imprints has been a blessing for a large number of parents hammering away to find means to support their child fight their battle.
 
@@ -76,47 +84,46 @@
 At present Imprints provide for 58 children with Type 1 Diabetes,16 children with Thalassemia and 7 children with Neuro Wilson's. We would like to expand the ambit of our caring ways to embrace a larger population and also requires your support to do so. This pandemic time has been difficult for everyone and we can't let it stop us from doing things that make us more human.
         </p>
       </div>
+      <div class="col-12 col-md-4">
+        <img class="img-fluid" src="/images/UNION LOGO WHITE-1.png" >
+      </div>
+      </div>
     </div>
     </div>
 
-    <div style="background-image: url('/images/money.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+    <div >
         <div class="container" id="smiles">
 
         <div class="row" >
-            <div class="col-6"></div>
-            <div class="col-6">
+          <div class="col-12"> 
+            <h1 class="abouttitle">Support Us</h1>
+           </div>
+            
+            <div class="col-12 col-md-6">
               <p>
                 IMPRINTS is a charitable organization that has been operating in our college for many years.
 
 Throughout these years students directly collected funds to run our activities.It is also known that Imprint does not have a steady source of income. But SPREADING THOUSANDS SMILES is an initiative that we have put forward to ensure a hassle free secure income.
-
+</p>
+<p>
 In this initiative volunteers pay at least Rs.1000 / - a year that is saving about Rs.3 a day for Imprints
 
 We are inviting volunteers to help us by donating Rs.1000 yearly to keep our little mates smile even better
               </p>
             </div>
-            <div class="col-6"></div>
+            <div class="col-12 col-md-6">
+              <img class="img-fluid" src="/images/smiles1-removebg-preview.png">
+            </div>
+            
             <div class="col-6">
-              <img src="/images/smiles1-removebg-preview.png">
               <button type="button" class="btn btn-primary btn-sm btn-block">Spread a Smile</button>
             </div>
         </div>
         </div>
 
       </div>
-      <div style="background-image: url('/images/plant.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
-      <div class="container" id="smiles2">
-        <div class="row" >
-          <div class="col-6">
-            <button type="button" class="btn btn-primary btn-sm btn-block">Donate Now</button>
-            <button type="button" class="btn btn-primary btn-sm btn-block">Donate Now</button>
-            <button type="button" class="btn btn-primary btn-sm btn-block">Donate Now</button>
-          </div>
-        </div>
-    </div>
-  </div>
 
-    <div class="row" id="gallery">
+    <div class="row" id="gallery" style="background-color: #ef476f">
         <div class="col-12" id="swiper">
           <h2>IMPRINTS GALLERY</h2><br><br>
             <div class="col-sm-12 col-xs-12">
@@ -164,7 +171,7 @@ We are inviting volunteers to help us by donating Rs.1000 yearly to keep our lit
                   </div> 
               </div>
               <div class="col-md-6 col-12" style="text-align: center;">
-                  <div class="row"><h4 style="color: #ef476f;">&emsp;Contact Us</h4></div>
+                  <div class="row conttitle"><h4 style="color: #ef476f;">&emsp;Get In Touch</h4></div>
                   <div class="row" style="color: rgb(201, 196, 196);">
                     <h5 class="col-12">Ummar Faris : 9207555913
                         <span class="con-social-btns">
@@ -191,7 +198,7 @@ We are inviting volunteers to help us by donating Rs.1000 yearly to keep our lit
                         </span>
                     </h5>
                   </div>
-                  <div class="row"><h4 style="color: #ef476f;">&emsp;Get Social</h4></div>
+                  <div class="row conttitle"><h4 style="color: #ef476f;">&emsp;Get Social</h4></div>
                   <div class="row">
 
                     <div class="con-social-btns col-12">
