--- a/main.html
+++ b/main.html
@@ -142,7 +142,7 @@
 
                     <div class="row align-self-center" >
                       <div class="col-12"> 
-                        <h1 class="abouttitle">Our Initiative</h1>
+                        <h1 class="abouttitle">Our Volunteer Program</h1>
                        </div>
                         
                         <div class="col-12 col-md-6">
