--- a/main.html
+++ b/main.html
@@ -37,6 +37,10 @@
             font-size: medium!important;
           }
         }
+        .fp-controlArrow.fp-prev{
+          border-color: transparent transparent transparent transparent;
+         
+        }
         .fp-prev{
           display: hidden;
         }
@@ -78,7 +82,7 @@
             </li>
           </ul>
           <div class="navbar-nav ml-auto">
-            <span class="btn-info btn btn-block btn-rounded fd-btn"  data-toggle="modal" data-target="#elegantModalForm">
+            <span class="btn-info btn btn-block btn-rounded fd-btn"  data-toggle="modal" data-target="#elegantModalForm" style="background: #f11045;">
               Send Us Your Feedback
             </span>
           </div>
@@ -143,7 +147,7 @@
                   </a>
                 </div>
               </div>
-              <div class="modal-footer mx-5 pt-3 mb-1">
+              <div class="modal-footer mx-5 pt-3 mb-1" style="background-color: rgba(0, 0, 0, 0.733);">
                 <p class="font-small white-text d-flex justify-content-end">Haven't donated yet : <a href="#smiles" class="blue-text ml-1" data-dismiss="modal" >
                     Donate Now</a></p>
               </div>
@@ -163,19 +167,9 @@
                 <div class="container">
                     <div class="row" style="height: 100vh;position: relative;">
                       <div class="col-12 zoom" style="height: 100vh;position: absolute;">
-                        <img class="img-fluid hoverable" src="./images/IMPRINTS LOGO (1).png" height="100vh" style="padding-top: 15vh;">
+                        <img class="img-fluid" src="./images/IMPRINTS LOGO (1).png" height="100vh" style="padding-top: 15vh;">
                       </div>
-                      <div class="col-12 img d-none d-md-block" style="height: 100vh;z-index: 100;position: absolute;">
-                        <img src="https://raw.githubusercontent.com/maxym11/fancy-carousel-assets/master/CUUB%20PNK.png" class="part1 rellax" alt="" data-rellax-speed="5"/>
-                        <img src="https://raw.githubusercontent.com/maxym11/fancy-carousel-assets/master/SPHEER%20PNK.png" class="part2 rellax" alt="" data-rellax-speed="5"/>
-                        <img src="https://raw.githubusercontent.com/maxym11/fancy-carousel-assets/master/CUUB%20PNK.png" class="part3 rellax" alt="" data-rellax-speed="8"/>
-                        <img src="https://raw.githubusercontent.com/maxym11/fancy-carousel-assets/master/SPHEER%20PNK.png" class="part4 rellax" alt="" data-rellax-speed="5"/>
-                        <img src="https://raw.githubusercontent.com/maxym11/fancy-carousel-assets/master/CUUB%20PNK.png" class="part5 rellax" alt="" data-rellax-speed="10"/>
-                        <img src="https://raw.githubusercontent.com/maxym11/fancy-carousel-assets/master/SPHEER%20PNK.png" class="part6 rellax" alt="" data-rellax-speed="4"/>
-                        <img src="https://raw.githubusercontent.com/maxym11/fancy-carousel-assets/master/CUUB%20PNK.png" class="part7 rellax" alt="" data-rellax-speed="6"/>
-                        <img src="https://raw.githubusercontent.com/maxym11/fancy-carousel-assets/master/SPHEER%20PNK.png" class="part8 rellax" alt="" data-rellax-speed="5"/>
-                        <img src="https://raw.githubusercontent.com/maxym11/fancy-carousel-assets/master/SPHEER%20PNK.png" class="part9 rellax" alt="" data-rellax-speed="5"/>
-                      </div>
+                      
                     </div>
                 </div>
             </div>
